2003-02-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gschemrc.in: Added comment to sort-component-library
	keyword that it is broken and that users should not use it.
	Filed bug #53.

2003-02-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/i_callbacks.nw: Fixed the annoying flicker if you keep
	executing the page next/prev commands.

	* noweb/gschem.nw: Applied patchlet from Steve Tell for disabling
	the guile 1.6.3 deprecated warnings.

	* README: Added note suggestion by Steve Tell about warning users
	that deprecated guile warnings are turned off.

2003-02-18 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Bumped version to 20030223

	* noweb/g_funcs.nw, noweb/x_menus.nw, scheme/gschem.scm: Applied
	Steve Tell's guile 1.6.3 patch. Thanks.

2003-02-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Applied Gabriel Paubert's warning reducing patch with
        a few minor mods.

2003-01-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/ru.po: Updated version from Andy Shevchenko

        * configure.in: Changed -fnative-struct to -mms-bitfields for
        gcc 3.2 mingw compiler (older mingw compilers are no longer 
        supported)

2003-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_image.nw: Added 3200x1600 to the image write dialog box.
 	Suggestions by Karel Kulhavy.

2003-01-11 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* noweb/o_arc.nw: Applied patch by Patrick to fix Bug #45: arc's 
	being drawn incorrectly with snap on.  Thanks Patrick.

	* Makefile.am: Fixed the distclean-local target. 

	* lib/system-gschemrc.in: Fixed typo (gif->png)

2003-01-10 Chris Ellec  <chrisATgtx.seul.org>

     	* noweb/o_misc.nw: Find Specific Text, replaced the strcmp used
     	to search for the text with a strstr so that we can search for
     	C12 instead of having to seach for refdes=C12. That way the user 
     	doesn't have to know what the symbol internal names are.

2003-01-09 Ales Hvezda   <ahvezda@geda.seul.org>
