@@ -535,10 +535,14 @@
 ; output-type string
 ;
 ; Controls what is actually printed
-;	string is either "current window" or "limits"
+;	string is either "extents" or "extents no margins" or 
+;       "current window"
 ;
-(output-type "limits")
+(output-type "extents")
+;(output-type "extents no margins")
 ;(output-type "current window")
+;;; (output-type "limits")  "limits" is considered deprecated and should 
+;;;                         not be used.
 
 ; output-orientation string
 ;
