@@ -122,7 +122,7 @@ int   default_print_orientation = LANDSCAPE;
 int   default_image_color = FALSE;
 int   default_print_color = FALSE;
 int   default_print_color_background = OUTPUT_BACKGROUND_COLOR;
-int   default_print_output_type = LIMITS;
+int   default_print_output_type = EXTENTS;
 int   default_print_output_capstyle = SQUARE_CAP;
 char *default_series_name = NULL;
 char *default_untitled_name = NULL;
