@@ -1,3 +1,11 @@
+2003-02-23 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* include/defines.h, noweb/f_print.nw: Applied Antonio's no 
+	margin printing patch (with minor modifications).  Thanks.
+
+	* include/defines.h, noweb/f_print.nw: Renamed "limits" to 
+	"extents"
+
 2003-02-22 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* noweb/s_clib.nw: Added a little more error checking to 
